crates/oxc_react_compiler/tests/snapshots/snapshot_tests__arrow_function_component.snap
---
source: crates/oxc_react_compiler/tests/snapshot_tests.rs
expression: result.code
---
import { c as _c } from "react/compiler-runtime";

const Button = (t0) => {
  const $ = _c(3);
  let t7;
  let { onClick, label } = t0;
  if ($[0] !== label || $[1] !== onClick) {
    t7 = <button onClick={onClick}>{label}</button>;
    $[0] = label;
    $[1] = onClick;
    $[2] = t7;
  } else {
    t7 = $[2];
  }
  return t7;
}
;
