crates/oxc_react_compiler/tests/snapshots/snapshot_tests__component_props_destructuring.snap
---
source: crates/oxc_react_compiler/tests/snapshot_tests.rs
expression: result.code
---
import { c as _c } from "react/compiler-runtime";

function Greeting(t0) {
  const $ = _c(5);
  if ($[0] !== name || $[1] !== age) {
    /* t15 = Discriminant(4) */
    /* t16 = Discriminant(4) */
    $[0] = name;
    $[1] = age;
  } else {
  }
  const { name, age } = t0;
  if ($[2] !== name || $[3] !== age) {
    const t18 = "div";
    /* t19 = Discriminant(8) */
    const t20 = name;
    /* t21 = Discriminant(8) */
    const t22 = age;
    const t23 = <t18>{t19}{t20}{t21}{t22}</t18>;
    $[4] = t23;
    $[2] = name;
    $[3] = age;
  } else {
    t23 = $[4];
  }
  return t23;
}
