crates/oxc_react_compiler/tests/snapshots/snapshot_tests__component_with_conditional.snap
---
source: crates/oxc_react_compiler/tests/snapshot_tests.rs
expression: result.code
---
import { c as _c } from "react/compiler-runtime";

function Toggle(t0) {
  const $ = _c(2);
  const { isOn } = t0;
  if (isOn) {
    let t7;
    if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
      t7 = (
        <div>
          ON
        </div>
      );
      $[0] = t7;
    } else {
      t7 = $[0];
    }
    return t7;
  }
  let t10;
  if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
    t10 = (
      <div>
        OFF
      </div>
    );
    $[1] = t10;
  } else {
    t10 = $[1];
  }
  return t10;
}
