crates/oxc_react_compiler/tests/snapshots/snapshot_tests__component_with_derived_value.snap
---
source: crates/oxc_react_compiler/tests/snapshot_tests.rs
expression: result.code
---
import { c as _c } from "react/compiler-runtime";

function Display(t0) {
  const $ = _c(2);
  if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
    /* t25 = Discriminant(4) */
  } else {
  }
  const t26 = items;
  const t27 = t26.length;
  const count = t27;
  if ($[1] === Symbol.for("react.memo_cache_sentinel")) {
    /* t29 = Discriminant(4) */
    const t30 = count;
    const t31 = 0;
    const t32 = t30 > t31;
  } else {
  }
}
