crates/oxc_react_compiler/tests/snapshots/snapshot_tests__component_with_jsx_children.snap
---
source: crates/oxc_react_compiler/tests/snapshot_tests.rs
expression: result.code
---
import { c as _c } from "react/compiler-runtime";
import { jsx as _jsx, jsxs as _jsxs, Fragment as _Fragment } from "react/jsx-runtime";

function Layout(t0) {
  const $ = _c(3);
  const { children } = t0;
  if ($[0] !== children) {
    $[0] = children;
  } else {
  }
  let t15;
  if ($[1] !== children) {
    const t12 = "div";
    const t13 = "container";
    const t14 = children;
    t15 = _jsx(t12, { className: t13, children: children });
    $[2] = t15;
    $[1] = children;
  } else {
    t15 = $[2];
  }
  return t15;
}
