crates/oxc_react_compiler/tests/snapshots/snapshot_tests__exported_component.snap
---
source: crates/oxc_react_compiler/tests/snapshot_tests.rs
expression: result.code
---
import { c as _c } from "react/compiler-runtime";

export function App(t0) {
  const t6 = "h1";
  const t7 = title;
  const t8 = <t6>{t7}</t6>;
  return t8;
}
