crates/oxc_react_compiler/tests/snapshots/snapshot_tests__hook_with_use_state.snap
---
source: crates/oxc_react_compiler/tests/snapshot_tests.rs
expression: result.code
---
import { c as _c } from "react/compiler-runtime";

function useToggle(initial) {
  const $ = _c(2);
  let t12;
  let t4 = useState(initial);
  if ($[0] !== t4) {
    let [value, setValue] = t4;
    let t9 = () => {
      return setValue(!value);
    };
    let toggle = t9;
    t12 = [value, toggle];
    $[0] = t4;
    $[1] = t12;
  } else {
    t12 = $[1];
  }
  return t12;
}
