crates/oxc_react_compiler/tests/snapshots/snapshot_tests__multiple_components.snap
---
source: crates/oxc_react_compiler/tests/snapshot_tests.rs
expression: result.code
---
import { c as _c } from "react/compiler-runtime";

function Header(t0) {
  const $ = _c(2);
  const { title } = t0;
  let t5;
  if ($[0] !== title) {
    t5 = <h1>{title}</h1>;
    $[0] = title;
    $[1] = t5;
  } else {
    t5 = $[1];
  }
  return t5;
}


function Footer(t0) {
  const $ = _c(2);
  const { text } = t0;
  let t5;
  if ($[0] !== text) {
    t5 = <footer>{text}</footer>;
    $[0] = text;
    $[1] = t5;
  } else {
    t5 = $[1];
  }
  return t5;
}
