crates/oxc_react_compiler/tests/snapshots/snapshot_tests__simple_component.snap
---
source: crates/oxc_react_compiler/tests/snapshot_tests.rs
expression: result.code
---
import { c as _c } from "react/compiler-runtime";

function Counter(t0) {
  const $ = _c(2);
  let { count } = t0;
  let t5;
  if ($[0] !== count) {
    t5 = <div>{count}</div>;
    $[0] = count;
    $[1] = t5;
  } else {
    t5 = $[1];
  }
  return t5;
}
